# greedy-scrabble-cpp

./: CMakeLists.txt  README.md
applications/ConsoleSolver/: CMakeLists.txt  ConsoleSolverMain.cpp
include/: Stub.hpp  TrieNode.hpp
source/: CMakeLists.txt  Stub.cpp  TrieNode.cpp
tests/: CMakeLists.txt  unit_tests_main.cpp
